commit-10: Added validation
